[gd_scene load_steps=3 format=3 uid="uid://bhbl3kyiea18r"]

[ext_resource type="Script" path="res://addons/questify/scripts/graph_nodes/quest_condition_node.gd" id="1_a8dc6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sjk50"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.266667, 0.694118, 0.921569, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4

[node name="QuestConditionNode" type="GraphNode" node_paths=PackedStringArray("type_input", "key_input", "tab_container", "boolean_value", "string_value", "integer_value")]
offset_right = 277.0
offset_bottom = 357.0
mouse_filter = 1
theme_override_constants/separation = 10
theme_override_styles/titlebar = SubResource("StyleBoxFlat_sjk50")
title = "Condition"
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 1
slot/0/right_color = Color(0, 0.584314, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color(1, 1, 1, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color(1, 1, 1, 1)
slot/3/left_icon = null
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color(1, 1, 1, 1)
slot/3/right_icon = null
slot/3/draw_stylebox = true
slot/4/left_enabled = false
slot/4/left_type = 0
slot/4/left_color = Color(1, 1, 1, 1)
slot/4/left_icon = null
slot/4/right_enabled = false
slot/4/right_type = 0
slot/4/right_color = Color(1, 1, 1, 1)
slot/4/right_icon = null
slot/4/draw_stylebox = true
script = ExtResource("1_a8dc6")
type_input = NodePath("Type/TypeInput")
key_input = NodePath("Key/KeyInput")
tab_container = NodePath("Value/TabContainer")
boolean_value = NodePath("Value/TabContainer/Boolean")
string_value = NodePath("Value/TabContainer/String")
integer_value = NodePath("Value/TabContainer/Integer")

[node name="Label" type="Label" parent="."]
layout_mode = 2
text = "Output"
horizontal_alignment = 2

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2

[node name="Type" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="Type"]
layout_mode = 2
text = "Query Type"

[node name="TypeInput" type="LineEdit" parent="Type"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
placeholder_text = "Type"

[node name="Key" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="Key"]
layout_mode = 2
text = "Key"

[node name="KeyInput" type="LineEdit" parent="Key"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
placeholder_text = "Key"

[node name="Value" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="Value"]
layout_mode = 2
text = "Value"

[node name="TabContainer" type="TabContainer" parent="Value"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/side_margin = 0

[node name="Boolean" type="CheckBox" parent="Value/TabContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
text = "Must be true?"

[node name="String" type="LineEdit" parent="Value/TabContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
placeholder_text = "Value"

[node name="Integer" type="SpinBox" parent="Value/TabContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(0, 24)
layout_mode = 2

[connection signal="text_changed" from="Type/TypeInput" to="." method="_on_type_text_changed"]
[connection signal="text_changed" from="Key/KeyInput" to="." method="_on_key_text_changed"]
[connection signal="tab_selected" from="Value/TabContainer" to="." method="_on_tab_selected"]
[connection signal="toggled" from="Value/TabContainer/Boolean" to="." method="_on_boolean_toggled"]
[connection signal="text_changed" from="Value/TabContainer/String" to="." method="_on_string_text_changed"]
[connection signal="value_changed" from="Value/TabContainer/Integer" to="." method="_on_integer_value_changed"]
